# micropidash

./: .gitignore  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  setup.py
.github/: FUNDING.yml
examples/: basic_1.py  esp_32_example.py  rpi_pico_2w_example.py  rpi_pico_2w_with_graph.py  shrikefi_example.py
micropidash/: __init__.py  micropidash.py
